Sun Mar 28 18:26:11 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmScript/FvwmScript.c: 
	* FvwmWharf/icons.c: include libs/Picture.h to get prototype of
	findImageFile.

Sun Mar 28 11:57:25 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmForm/Makefile.am (FvwmTalk): 
	* FvwmCommand/scripts/Makefile.am (.pl):
	* FvwmConsole/Makefile.am: removed unnecesary chmod +x commands;
	anything listed in a _SCRIPTS primary is correctly installed with
	execute permissions set.

1999-03-27  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmIconMan/x.c:
	* FvwmIconMan/readconfig.c:
	* FvwmIconMan/readconfig.h:
	* FvwmIconMan/FvwmIconMan.h: use Binding structure from fvwmlib instead
	of private reimplementation

Mon Mar 22 19:01:38 1999  DanEspen  <dje@blue>

	* FvwmForm/Makefile.am (FvwmTalk): Fix loop in FvwmTalk.

1999-03-22  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmAudio/FvwmAudio.c (config): replaced call to PeekToken by
	GetNextToken.

	* FvwmPager/x_pager.c (IconMoveWindow):
	(MoveWindow): fixed mb2 with transient pager
	(InsertExpand): fixed coredump fix that cause a coredump :)

1999-02-22  Hippo

	* FvwmWinList/* Applied patch from Jesper James: new option
	ButtonFrameWidth to set relief width, 0 is valid. TruncateLeft always
	works, not just with LeftJustify.

1999-03-21  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/x_pager.c (DispatchEvent): Implemented transient pager in
	a more general way (allows all three buttons to work).

1999-03-21  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/x_pager.c (InsertExpand):
	(GetBalloonLabel): Replaced macro INSERT by function InsertExpand.

	* FvwmPager/x_pager.c (DispatchEvent):
	(FvwmErrorHandler): added misssing XUngrab... to fix 'transient' option
	with mouse button 2

1999-03-21  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* FvwmGtk/FvwmGtk.c: Implement option menus.

Sat Mar 20 14:55:15 1999  DanEspen  <dje@blue>

	* FvwmTalk: If I did this right, the FvwmTalk directory should