@@ -1,3 +1,8 @@
+1999-03-29  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>
+
+	* FvwmPager/x_pager.c (MoveWindow): Fix moving of icons
+	via the pager (always send Move command with a context of t->w).
+
 Sun Mar 28 18:26:11 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* FvwmScript/FvwmScript.c: 
